# Project_int_magazin

./: .env.example  README.md  category_fixture.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options_alter_blogpost_content_and_more.py  0003_alter_blogpost_preview_image_and_more.py
blog/templates/blog/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: README.md  admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: groups_fixture.json  groups_fixture_2.json  product_fixture.json
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_product_is_active.py  0003_alter_product_options_product_is_published.py  0004_alter_product_options.py  0005_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_by_category.html
catalog/templates/includes/: footer.html  inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
media/avatars/: images_1.jfif
media/blog_previews/: e7f8d1f06a9e11ee879e363fac71b015_upscaled_eWXmRAf.jfif  images.jfif
static/css/: style.css
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_moderator_group.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  (+4 more)
